<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstPageFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".view.activity.RegisterActivity">


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_back_arrow"
        android:onClick="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/baloo_bold"
        android:inputType="textPersonName"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/baloo_bold"
        android:inputType="textPersonName"
        android:text="Account"
        android:textColor="@color/white"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/firstPageFragmentContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_person"
            android:fontFamily="@font/robo_regular"
            android:hint="  Insert Name"
            android:inputType="textPersonName"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:fontFamily="@font/robo_regular"
            android:hint="  Insert Email"
            android:inputType="textEmailAddress"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:fontFamily="@font/robo_regular"
            android:layout_marginBottom="20dp"
            android:hint="  Insert Password"
            android:inputType="textPassword"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fill_button"
            android:fontFamily="@font/robo_regular"
            android:text="Sign Up "
            android:textAllCaps="false"
            android:textColor="@color/lightgrey"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:onClick="Register"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_button"
            android:fontFamily="@font/robo_regular"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="18dp"
            app:backgroundTint="@null"
            android:onClick="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>