<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activity.CreateSplitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/title_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bold"
        android:inputType="textPersonName"
        android:text="Split the Bill"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleView"
        app:layout_constraintBottom_toTopOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="32dp"
        app:layout_constraintGuide_percent="0.25" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_card"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter the Bill Title"
            android:fontFamily="@font/robo_bold"
            android:textSize="24dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/edtInsertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Insert Title"
            android:lines="1"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/robo_bold"
            android:textColor="@color/black"
            android:textSize="48dp"
            app:layout_constraintTop_toBottomOf="@+id/txt"/>

        <EditText
            android:id="@+id/edtInsertTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:visibility="gone"
            android:hint="0.00"
            android:inputType="numberDecimal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/robo_bold"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_euro"
            android:gravity="center"
            android:textSize="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnNextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fill_button"
            android:fontFamily="@font/robo_bold"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/lightgrey"
            android:textSize="18dp"
            android:onClick="nextBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:windowSoftInputMode="adjustPan"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>